clusters/main/kubernetes/system/networkpolicies/app/registry-allow-ingress-cilium-gateway.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-cilium-gateway-registry
  namespace: registry
spec:
  endpointSelector:
    matchLabels:
      app: docker-registry
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
